Remove unused Coder class and aiprogrammer package; add initial implementation for PMCSearch class in pmcapi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,4 @@ version = "1"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["gwascat*","aiprogrammer*"]
+include = ["gwascat*","expatlas*","pmcapi*"]
